<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bombeto</groupId>
    <artifactId>SpesaGiaccherini</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>SpesaGiaccherini</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>23.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.bombeto.spesagiaccherini.Testing</mainClass>
                            <launcher>SpesaGiaccherini</launcher>
                            <jlinkZipName>SpesaGiaccheriniZIP</jlinkZipName>
                            <jlinkImageName>SpesaGiaccherini</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.bombeto.spesagiaccherini.Testing</mainClass>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.moditect</groupId>-->
<!--                <artifactId>moditect-maven-plugin</artifactId>-->
<!--                <version>1.2.1.Final</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>add-module-infos</id>-->
<!--                        <phase>generate-resources</phase>-->
<!--                        <goals>-->
<!--                            <goal>add-module-info</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <outputDirectory>${project.build.directory}/modules</outputDirectory>-->
<!--                            <overwriteExistingFiles>true</overwriteExistingFiles>-->
<!--                            <modules>-->
<!--&lt;!&ndash;                                <module>&ndash;&gt;-->
<!--&lt;!&ndash;                                    <artifact>&ndash;&gt;-->
<!--&lt;!&ndash;                                        <groupId>org.apache.pdfbox</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;                                        <artifactId>pdfbox</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;                                        <version>3.0.4</version>&ndash;&gt;-->
<!--&lt;!&ndash;                                    </artifact>&ndash;&gt;-->
<!--&lt;!&ndash;                                    <moduleInfoSource>&ndash;&gt;-->
<!--&lt;!&ndash;                                        module org.apache.pdfbox {&ndash;&gt;-->
<!--&lt;!&ndash;                                        requires org.apache.pdfbox.io;&ndash;&gt;-->
<!--&lt;!&ndash;                                        requires org.apache.commons.logging;&ndash;&gt;-->
<!--&lt;!&ndash;                                        requires org.apache.fontbox;&ndash;&gt;-->
<!--&lt;!&ndash;                                        requires transitive java.desktop;&ndash;&gt;-->
<!--&lt;!&ndash;                                        exports org.apache.pdfbox;&ndash;&gt;-->
<!--&lt;!&ndash;                                        exports org.apache.pdfbox.text;&ndash;&gt;-->
<!--&lt;!&ndash;                                        }&ndash;&gt;-->
<!--&lt;!&ndash;                                    </moduleInfoSource>&ndash;&gt;-->
<!--&lt;!&ndash;                                </module>&ndash;&gt;-->
<!--                                <module>-->
<!--                                    <artifact>-->
<!--                                        <groupId>org.apache.pdfbox</groupId>-->
<!--                                        <artifactId>pdfbox-io</artifactId>-->
<!--                                        <version>3.0.4</version>-->
<!--                                    </artifact>-->
<!--                                    <moduleInfoSource>-->
<!--                                        module org.apache.pdfbox.io {-->
<!--                                        requires org.apache.commons.logging;-->
<!--                                        requires java.desktop;-->
<!--                                        exports org.apache.pdfbox.io;-->
<!--                                        }-->
<!--                                    </moduleInfoSource>-->
<!--                                </module>-->
<!--                                <module>-->
<!--                                    <artifact>-->
<!--                                        <groupId>org.apache.pdfbox</groupId>-->
<!--                                        <artifactId>fontbox</artifactId>-->
<!--                                        <version>3.0.4</version>-->
<!--                                    </artifact>-->
<!--                                    <moduleInfoSource>-->
<!--                                        module org.apache.fontbox {-->
<!--                                        requires org.apache.commons.logging;-->
<!--                                        requires org.apache.pdfbox.io;-->
<!--                                        exports org.apache.fontbox.* to org.apache.pdfbox;-->
<!--                                        }-->
<!--                                    </moduleInfoSource>-->
<!--                                </module>-->
<!--                            </modules>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>